# msg-rules-enforcement-hook

./: .pre-commit-hooks.yaml  README.md  pyproject.toml  setup.cfg
msg_rules_enforcement_hook/: msg_rules_enforcement.py
