[tool.poetry]
name = "msg_rules_enforcement_hook"
version = "v0.0.4"
description = "Commit hook preparing message using branch name"
authors = ["Gastón Avila <avila.gas@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.5"

[tool.poetry.dev-dependencies]
pytest = "^5.0.0"

[tool.poetry.scripts]
msg-rules-enforcement = "msg_rules_enforcement_hook.msg_rules_enforcement:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
