[metadata]
name = msg_rules_enforcement_hook
version = 1.4.0
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/snowindy/msg-rules-enforcement-hook
author = Eugene Sapozhnikov
author_email = eugene.sapozhnikov@gmail.com
license = MIT
license_file = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy

[options]
packages = find:
python_requires = >=3.5.1

[options.entry_points]
console_scripts =
    msg-rules-enforcement = msg_rules_enforcement_hook.msg_rules_enforcement:main

[options.packages.find]
exclude =
    tests*
    testing*
